# olgapombo.github.io

./: .gitignore  Interviews.md  README.md  _config.yml  academic_profile.md  curriculum.md  each_life.md  each_life_filha_catarina.md  each_life_filha_patricia.md  each_life_livros_nao_escritos.md  each_life_meu_irmao.md  each_life_meu_pai.md  each_life_minha_mae.md  each_life_neta_alice.md  hugo.toml  interviews.md  media_mentions.md  online_publications.md  onlineconferences.md  onlineinterviews.md  onlinepublications.md  onlinetalks.md  opening_statement.md  organization_scientific_meetings.md  preprints.md  projects.md  publications-kairos.md  publications.md  pyproject.toml  research.md  supervision  supervision.md  teaching_doctoral_program.md  wrangler.toml
.github/workflows/: deploy-cloudflare.yml_  hugo.yml  optimize-images.yml
_layouts/: default.html
assets/css/: style.css
content/: _index.md  academic_profile.md  book.md  each_life.md  each_life_filha_catarina.md  each_life_meu_irmao.md  interviews.md  media_mentions.md  onlinetalks.md  opening_statement.md  organization_scientific_meetings.md  preprints.md  publications-kairos.md  publications.md  research.md  supervision.md  teaching_doctoral_program.md
content/each_life/: each_life.md  each_life_amigos.md  each_life_filha_catarina.md  (+6 more)
data/: books.json
images/: foto-meu-pai-corpo-inteiro.docx
layouts/: index.html
research/: encyclopaedia_and_hypertext.md  project1.md  projects.md
spec/: SEO.md
static/: OP_pequena_entrevista_sobre_fgil.doc  robots.txt
tests/: test_optimizer.py
(+238 files in other folders)
